sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:8: error: ';' expected but 'else' found.
    else {
    ^